--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Shakil Ansary</title>
+    <title>Mahmudul Islam Mahin</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -25,16 +25,16 @@
     <section class="hero-setion">
       <div class="container hero__container">
         <h5>Hello I'm</h5>
-        <h1>Shakil Ansary</h1>
-        <h5>Front-End Developer</h5>
+        <h1>Mahmudul Islam Mahin</h1>
+        <h5>Student & Blogger</h5>
         <div class="hero-btn">
           <a class="outline-btn" href="#">Download CV</a>
           <a class="solid-btn" href="#contact">Let's Talk</a>
         </div>
         <div class="header__socials">
-          <a href="#"><i class="bi bi-facebook"></i></a>
-          <a href="#"><i class="bi bi-instagram"></i></a>
-          <a href="#"><i class="bi bi-github"></i></a>
+          <a href="www.facebook.com/itzMahin728"><i class="bi bi-facebook"></i></a>
+          <a href="www.instagram.com/itzmahin.2006"><i class="bi bi-instagram"></i></a>
+          <a href="https://github.com/itzMahin06"><i class="bi bi-github"></i></a>
         </div>
         <div class="row my__img-row">
           <div class="me">
