--- a/index.html
+++ b/index.html
@@ -91,28 +91,18 @@
         </div>
         <div class="about__content">
           <div class="about__cards">
-            <article class="about__card">
-              <i class="bi bi-award"></i>
-              <h4>Experience</h4>
-              <small>3+ Years</small>
+           <article class="about__card">
+              <i class="bi bi-person-circle"></i>
+              
+              <small>Name: Mahmudul Islam Mahin</small>
+              <small>Date of Birth: 28 August 2006</small>
+              <small>Address: BAU Campus, Mymensingh </small>
             </article>
-            <article class="about__card">
-              <i class="bi bi-people"></i>
-              <h4>Clients</h4>
-              <small>50+ Worldwide</small>
-            </article>
-            <article class="about__card">
-              <i class="bi bi-braces"></i>
-              <h4>Projects</h4>
-              <small>80+ Completed</small>
-            </article>
-          </div>
+             </div>
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis odio
-            dolore, sint eum sed illum quibusdam reiciendis excepturi in? Est
-            saepe numquam nostrum perferendis dolorum aperiam sed laudantium a,
-            voluptate laborum, voluptatibus omnis sint fugit labore consequatur
-            eaque, maiores molestias.
+            	
+
+Mahmudul Islam Mahin is a Bangladeshi Musical artist, Blogger, Student and a rising star in Bangladesh. Mahmudul Islam Mahin, who spent his childhood and adolescence, was born and raised in Melandah, Jamalpur (August 28, 2006).
           </p>
           <div class="about-btn">
             <a class="solid-btn mob-solid-btn" href="#contact">Let's Talk</a>
